<resources>
    <string name="app_name">Binar-Challenge-CH-4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Welcome to Note App</string>
    <string name="loading">Loading...</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Log In</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="save_note">Save Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="need_account">Need Account?</string>
    <string name="dialog_title_delete">Delete Note</string>
    <string name="dialog_message_delete">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_email">Please enter a valid email address.</string>
    <string name="error_password">Please enter a password with at least 6 characters.</string>
    <string name="error_confirm_password">Passwords do not match.</string>
    <string name="fab_add">fab add</string>
    <string name="ic_delete">ic delete</string>
    <string name="ic_edit">ic edit</string>
    <string name="delete">Delete</string>
    <string name="txt_cancel">cancel</string>
    <string name="edit_data">edit data</string>
    <string name="masukkan_judul">masukkan judul</string>
    <string name="masukkan_catatan">masukkan catatan</string>
    <string name="error_empty_field">Kolom tidak boleh kosong.</string>
    <string name="update">update</string>
    <string name="add_data">Add Data</string>
    <string name="filter">Filter</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="logout">Logout</string>
</resources>